# matlab-cmake-hello-world

./: CMakeLists.txt  README  project.config
tests/: CMakeLists.txt
